# nfs-watcher

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json  tsconfig.json
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: index.ts  lib.rs
