[package]
edition = "2021"
name = "nfs-watcher"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.2", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2.9.3"
notify = {version = "5.0.0", features = ["serde"]}
serde = "1.0.151"
serde_json = "1.0.91"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
